-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-panama
-
Component/s: tools
StdLibTest intermittently fails with hotspot crashes - e.g.:
SIGSEV (0xb)
# V [libjvm.so+0xc05161] NativeInvoker::free_upcall_stub(char*)+0x11
Other times, a Java error (NPE) occurs, always in code related to native stubs.
SIGSEV (0xb)
# V [libjvm.so+0xc05161] NativeInvoker::free_upcall_stub(char*)+0x11
Other times, a Java error (NPE) occurs, always in code related to native stubs.