8209151: StdLibTest fails intermittently

* add lock to code cache access
* add reachability fence in NativeInvoker